# RepoPilot-Lite

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: release_notes_v0.2.md
repopilot_lite/: __init__.py  executor.py  llm_client.py  main.py  models.py  planner.py  storage.py  tools.py
tests/: test_api.py
